Some fixes: 1) PDG-MIG failed when it tries to retrieve the 'static' property of some not defined methods(undeclared). Since, those undefined methods are not explored in the PDG/Alias/MIG analysis (because we have no access to its bodies), we added a condition for this methods to be always defined, before consulting other properties like 'isStatic' (GetDeclarationFromExpression class). 2) Some generated classes/members have a null type causing NullPointerException during type analysis. The null type is substituted by Type.noType representing the absence of a type (GraphUtils class). 3) For some method invocations, we failed to detect that their callee method was generated, causing errors when requesting symbol information (since symbols are usually null for these generated members). So, we refine the mechanism to detect those generated methods, avoiding the errors (ASTTypeVisitor class).